# mlir-egglog

./: .gitignore  LICENSE  README.md  example.py  example_basic.py  example_rewrite.py  example_tutorial.py  example_with_custom_rewrite.py  pyproject.toml
.github/workflows/: ci.yml  ci_linux.yml  ci_mac.yml  python-checks.yml
src/mlir_egglog/: __init__.py  basic_simplify.py  builtin_functions.py  dispatcher.py  egglog_optimizer.py  expr_model.py  ir_to_mlir.py  jit_engine.py  llvm_runtime.py  memory_descriptors.py  mlir_backend.py  mlir_gen.py  optimization_rules.py  python_to_ir.py  term_ir.py  trig_simplify.py  tutorial.py
tests/: test_basic_expressions.py  test_dispatch.py  test_simplify.py
