[project]
name = "mlir-egglog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "egglog>=11.0.0",
    "llvmlite>=0.44.0",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.15.10",
    "pytest>=8.3.5",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
disallow_incomplete_defs = "false"
disallow_untyped_defs = "false"
pretty = "true"
warn_unused_configs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
ignore_missing_imports = "true"
no_implicit_reexport = "true"
strict_optional = "true"
strict_equality = "true"
extra_checks = "true"
disallow_subclassing_any = "false"
disallow_untyped_decorators = "false"
disallow_any_generics = "true"
follow_imports = "silent"

[tool.uv.sources]
# until https://github.com/python/mypy/pull/19600 is merged
mypy = { git = "https://github.com/saulshanabrook/mypy", branch = "issue-19599" }
