[project]
name = "mlir-egglog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "egglog>=13.1.0",
    "llvmlite>=0.47.0",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "pytest>=9.0.3",
]

[tool.black]
target-version = ["py312"]

[tool.mypy]
disable_error_code = ["import-untyped"]
disallow_incomplete_defs = "false"
disallow_untyped_defs = "false"
pretty = "true"
warn_unused_configs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
ignore_missing_imports = "true"
no_implicit_reexport = "true"
strict_optional = "true"
strict_equality = "true"
extra_checks = "true"
disallow_subclassing_any = "false"
disallow_untyped_decorators = "false"
disallow_any_generics = "true"
follow_imports = "silent"
