[project]
name = "mlir-egglog"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "egglog>=13.2.0",
    "llvmlite>=0.47.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "pytest>=9.0.3",
]

[tool.black]
target-version = ["py312"]

[tool.mypy]
disable_error_code = ["import-untyped"]
disallow_incomplete_defs = "false"
disallow_untyped_defs = "false"
pretty = "true"
warn_unused_configs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
ignore_missing_imports = "true"
no_implicit_reexport = "true"
strict_optional = "true"
strict_equality = "true"
extra_checks = "true"
disallow_subclassing_any = "false"
disallow_untyped_decorators = "false"
disallow_any_generics = "true"
follow_imports = "silent"
